<resources>
    <string name="app_name">SoftwareEngineering</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Log out</string>
    <string name="search_tint">Wpisz nazwę składnika</string>
    <string name="product_name_title">Nazwa składnika</string>
    <string name="macros_abbr">kal / b / w / t</string>
    <string name="home_menu_title">Home</string>
    <string name="logout_menu_title">Logout</string>
    <string name="profile_menu_title">Profile</string>
    <string name="categories_menu_title">Categories</string>
    <string name="list_sets_label">Nazwa zestawu</string>
    <string name="category_list_label">Dodaj aktualne pomiary ciała</string>
    <string name="wzrost">Wzrost</string>
    <string name="height">height</string>
    <string name="height_hint">183</string>
    <string name="waga">Waga</string>
    <string name="weight_hint">72</string>
    <string name="obwod_barkow">Obwód barków</string>
    <string name="obwod_barkow_hint">94</string>
    <string name="obwod_ramienia">Obwód ramienia</string>
    <string name="obwod_ramienia_hint">67</string>
    <string name="chest_label">Obwód klatki pierściowej</string>
    <string name="chest_hint">84</string>
    <string name="waist_label">Obwód talii</string>
    <string name="waist_hint">63</string>
    <string name="hips_label">Obwód bioder</string>
    <string name="hips_hint">47</string>
    <string name="thigh_label">Obwód ud</string>
    <string name="thigh_hint">37</string>
    <string name="calves_label">Obwód łydki</string>
    <string name="submit_button_alt">Submit Button</string>
    <string name="measurements_link_to_list">Spojrzeć na historię pomiarów</string>
    <string name="home_navigation_button_alt">Home navigation button</string>
    <string name="categories_navigation_button_alt">Categories navigation button</string>
    <string name="profile_navigation_button_alt">Profile navigation button</string>
    <string name="log_out_navigation_button_alt">Log out Navigation Button</string>
    <string name="sign_in_title">Sign in</string>
    <string name="email_label">Email</string>
    <string name="example_ex_com">example@ex.com.</string>
    <string name="password_label">Password</string>
    <string name="password_hint">qwerty123</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_new_one">Create new one</string>
    <string name="sign_up_title">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dish_name_title">Dish Name</string>
    <string name="user_name">User Name</string>
    <string name="some_text">Some text...</string>
    <string name="_20_04_2023">20.04.2023</string>
    <string name="topic">Topic</string>
    <string name="plec_label">Płeć:</string>
    <string name="email_label_profil">Email:</string>
    <string name="nazwisko_label">Nazwisko:</string>
    <string name="imie_label">Imie:</string>
    <string name="powiadomienia_label">Powiadomienia:</string>
    <string name="avatar_profile_image_alt">Avatar profile image</string>
    <string name="edit_avatar_profile_button_alt">Edit Avatar Profile Button</string>
    <string name="time_to_consume">Time to consume</string>
    <string name="product_name">Product Name</string>
    <string name="dropdown_icon_alt">Dropdown Icon</string>
    <string-array name="menu_options">
        <item>Strona główna</item>
        <item>Składniki</item>
    </string-array>
    <string-array name="ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>