<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/gradient_green_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_wrapper"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#51B9A1"
        android:elevation="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="220dp"
            android:layout_height="220dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/profile_circle">

            <ImageView
                android:id="@+id/edit_avatar_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/ic_edit_white"
                android:background="@drawable/edit_circle"
                android:layout_margin="6dp"
                android:elevation="5dp"
                android:padding="10dp"
                android:contentDescription="@string/edit_avatar_profile_button_alt" />

            <ImageView
                android:id="@+id/avatar_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/profile_avatar_bg_circle"
                android:contentDescription="@string/avatar_profile_image_alt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/top_wrapper">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/imie_label"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:letterSpacing=".05"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintWidth_percent="0.45"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_profile"
            android:padding="15dp"
            android:textSize="12sp"
            android:textColorHint="#397C70"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintWidth_percent="0.49"
            android:autofillHints="name"
            android:inputType="text"
            tools:ignore="LabelFor"/>

        <TextView
            android:id="@+id/last_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/nazwisko_label"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:letterSpacing=".05"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintWidth_percent="0.46"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_profile"
            android:padding="15dp"
            android:textSize="12sp"
            android:textColorHint="#397C70"
            app:layout_constraintTop_toBottomOf="@+id/last_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintWidth_percent="0.49"
            android:autofillHints="lastName"
            android:inputType="text"
            tools:ignore="LabelFor"/>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/email_label_profil"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:letterSpacing=".05"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/editTextLastName"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_profile"
            android:padding="15dp"
            android:textSize="12sp"
            android:textColorHint="#397C70"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            app:layout_constraintLeft_toLeftOf="parent"
            android:autofillHints="email"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor"/>

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plec_label"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:letterSpacing=".05"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <RelativeLayout
            android:id="@+id/spinner_wrapper"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/spinner_bg"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/gender_label"
            app:layout_constraintLeft_toLeftOf="parent">

            <Spinner
                android:id="@+id/spinnerGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:layout_marginHorizontal="2dp"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_marginVertical="2dp"
                android:spinnerMode="dropdown"
                />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/ic_dropdown"
                android:contentDescription="@string/dropdown_icon_alt" />

        </RelativeLayout>

        <TextView
            android:id="@+id/notif_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powiadomienia_label"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="#2C806D"
            android:paddingVertical="2dp"
            android:paddingHorizontal="8dp"
            android:textAlignment="center"
            android:textSize="11sp"
            android:letterSpacing=".05"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/spinner_wrapper"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toBottomOf="@+id/notif_label">

            <Switch
                android:id="@+id/switchNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:track="@drawable/checkbox_bg" />

            <ImageButton
                android:id="@+id/buttonSave"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:background="@drawable/rounded_background_submit"
                android:src="@drawable/ic_submit"
                android:contentDescription="@string/submit_button_alt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_panel"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_background"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/categories_wrapper">

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_home"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/home_navigation_button_alt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_menu_title"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:paddingVertical="1dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/categories_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/home_wrapper"
            app:layout_constraintRight_toLeftOf="@id/profile_wrapper">

            <ImageButton
                android:id="@+id/categories_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_categories"
                app:layout_constraintBottom_toTopOf="@id/categories_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/categories_navigation_button_alt" />

            <TextView
                android:id="@+id/categories_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories_menu_title"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/categories_btn"
                app:layout_constraintLeft_toLeftOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/categories_wrapper"
            app:layout_constraintRight_toLeftOf="@id/logout_wrapper">

            <ImageButton
                android:id="@+id/profile_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_profile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/profile_navigation_button_alt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_menu_title"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold"
                android:paddingVertical="1dp"
                android:paddingHorizontal="7dp"
                android:background="@drawable/menu_active_element_background"
                app:layout_constraintTop_toBottomOf="@+id/profile_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logout_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="19dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/profile_wrapper"
            app:layout_constraintRight_toRightOf="parent">

            <ImageButton
                android:id="@+id/logout_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_sign_out"
                app:layout_constraintBottom_toTopOf="@id/logout_label"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/log_out_navigation_button_alt" />

            <TextView
                android:id="@+id/logout_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_menu_title"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:textStyle="bold"
                android:paddingStart="5dp"
                app:layout_constraintTop_toBottomOf="@+id/logout_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>