<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/edittext">
        <RelativeLayout
            android:id="@+id/tips_top_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/tip_user_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/avatar_green"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_profile_img_white"
                android:padding="2dp"
                android:contentDescription="@string/profile_image_alt" />

            <TextView
                android:id="@+id/tip_user_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tip_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="30dp"
                android:text="@string/topic"
                android:gravity="center"
                android:textColor="@color/yellow"
                android:textSize="15sp"
                android:textStyle="bold"/>


        </RelativeLayout>

        <TextView
            android:id="@+id/tip_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/some_text"
            android:textSize="14sp"
            android:layout_marginHorizontal="15dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tips_top_layout"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <ImageView
            android:id="@+id/edit_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_edit"
            android:backgroundTint="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tip_description"
            app:layout_constraintRight_toLeftOf="@+id/remove_btn"/>
        <ImageView
            android:id="@+id/remove_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_delete"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tip_description"
            app:layout_constraintRight_toLeftOf="@+id/tip_date"/>

        <ImageView
            android:id="@+id/edit_nonactive_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_edit"
            android:backgroundTint="#c73650"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tip_description"
            app:layout_constraintRight_toLeftOf="@+id/remove_btn"/>
        <ImageView
            android:id="@+id/remove_nonactive_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/ic_delete"
            android:backgroundTint="#c73650"
            app:layout_constraintTop_toBottomOf="@+id/tip_description"
            app:layout_constraintRight_toLeftOf="@+id/tip_date"/>

        <TextView
            android:id="@+id/tip_date"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/_20_04_2023"
            android:textSize="14sp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tip_description"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>