<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".register"
    android:background="@drawable/gradient_register">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="110dp"
        app:cardBackgroundColor="#50308878"
        app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_title"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="40dp"
            android:text="@string/email_label"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:letterSpacing=".05"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/edittext"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            app:layout_constraintLeft_toLeftOf="parent"
            android:autofillHints="email"
            android:labelFor="@+id/email_label"
            tools:ignore="LabelFor" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#397C70"
            android:layout_marginTop="45dp"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:text="@string/password_label"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:letterSpacing=".05"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/edittext"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/password_label"
            app:layout_constraintLeft_toLeftOf="parent"
            android:autofillHints="password"
            android:labelFor="@+id/password_label"
            tools:ignore="LabelFor" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#397C70"
            android:layout_marginTop="45dp"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintTop_toBottomOf="@+id/password_label"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageButton
            android:id="@+id/btn_register"
            android:layout_width="85dp"
            android:layout_height="35dp"
            android:layout_marginTop="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="130dp"
            android:layout_marginBottom="165dp"
            android:background="@drawable/rounded_background_submit"
            android:src="@drawable/ic_submit"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/submit_button_alt" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/login_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                />

            <TextView
                android:id="@+id/loginNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_title"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="#6AFFB8"
                android:layout_marginStart="5dp"
                 />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>